# bnot

./: .gitignore  .prettierignore  CLAUDE.md  Cargo.toml  LICENSE.md  Package.resolved  Package.swift  README.md  package.json  pnpm-lock.yaml
.claude/skills/release/: SKILL.md
.cursor/: worktrees.json
.github/workflows/: release.yml
Sources/BuddyBridge/: BuddyBridge.swift  ClaudeHookInput.swift
Sources/BuddyNotch/App/: AppDelegate.swift
Sources/BuddyNotch/Core/: ContextScanner.swift  GhosttyTabMapper.swift  GlobalHotkeys.swift  HookInstaller.swift  ProcessScanner.swift  SessionManager.swift  SocketServer.swift  SoundEngine.swift  TerminalJumper.swift
Sources/BuddyNotch/UI/: ApprovalView.swift  AskView.swift  CompactView.swift  DiffView.swift  JumpView.swift  NotchContentView.swift  NotchPanel.swift  OverviewView.swift  PixelBuddy.swift  PixelProgressBar.swift  Styles.swift
Sources/BuddyNotchShared/: Constants.swift  HookEvent.swift  Session.swift
apps/desktop/: Cargo.toml  build.rs  tauri.conf.json  tauri.dev.conf.json
apps/desktop/capabilities/: default.json
apps/desktop/icons/: icon.icns
apps/desktop/src/: commands.rs  keyboard.rs  lib.rs  main.rs  notch.rs  peer_auth.rs  sidecar.rs  socket_server.rs  tray.rs  window.rs
apps/landing/: index.html  package.json  vite.config.ts
apps/landing/src/: app.tsx  index.css
apps/landing/src/components/: bnot-mark.tsx  bnot-panel.module.css  bnot-panel.tsx  compact-notch-layer.tsx  device-frame.module.css  device-frame.tsx  diff-view.tsx  dynamic-notch.tsx  (+20 more)
apps/web/: index.html  package.json  vite.config.ts
apps/web/src/: app.tsx  index.css  main.tsx
(+43 files in other folders)
