[package]
name = "bnot"
version = "0.1.10"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "macos-private-api"] }
tauri-plugin-deep-link = "2"
tauri-plugin-autostart = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
url = "2"
serde = { workspace = true }
serde_json = { workspace = true }
objc2 = "0.6"
objc2-foundation = "0.3"
objc2-app-kit = { version = "0.3", features = [
    "NSScreen",
    "NSApplication",
    "NSRunningApplication",
] }
core-graphics = "0.24"
tokio = { version = "1", features = ["rt-multi-thread", "net", "io-util", "macros", "sync"] }
libc = "0.2"
libproc = "0.14"

[lib]
name = "bnot_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
